--- a/PresentBaseSwift3.0/Base.lproj/Main.storyboard
+++ b/PresentBaseSwift3.0/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -26,15 +27,45 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="3" translatesAutoresizingMaskIntoConstraints="NO" id="5XX-ws-9oE">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="149"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="148"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         </imageView>
                                         <imageView userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ShO-ZA-qwn">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="149"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="148"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dad" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dO1-Rj-sqS">
+                                            <rect key="frame" x="166" y="32" width="52" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCi-Dm-eWU">
+                                            <rect key="frame" x="157.5" y="74" width="60" height="2"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="2" id="0bF-TQ-8uo"/>
+                                                <constraint firstAttribute="width" constant="60" id="L06-BT-0pU"/>
+                                            </constraints>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some of kind tech" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFK-AN-1Kf">
+                                            <rect key="frame" x="75" y="92" width="224" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="dFK-AN-1Kf" firstAttribute="top" secondItem="rCi-Dm-eWU" secondAttribute="bottom" constant="16" id="Lif-eX-ihG"/>
+                                        <constraint firstItem="dFK-AN-1Kf" firstAttribute="leading" secondItem="x7m-uE-EYi" secondAttribute="leadingMargin" constant="67" id="adj-en-Sxo"/>
+                                        <constraint firstItem="rCi-Dm-eWU" firstAttribute="centerY" secondItem="x7m-uE-EYi" secondAttribute="centerY" id="ea3-K2-ne4"/>
+                                        <constraint firstItem="rCi-Dm-eWU" firstAttribute="centerX" secondItem="x7m-uE-EYi" secondAttribute="centerX" id="hAh-hl-bbv"/>
+                                        <constraint firstItem="rCi-Dm-eWU" firstAttribute="top" secondItem="dO1-Rj-sqS" secondAttribute="bottom" constant="12" id="mBT-aI-Epg"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="dO1-Rj-sqS" secondAttribute="trailing" constant="149" id="mJf-rW-ykZ"/>
+                                        <constraint firstItem="dO1-Rj-sqS" firstAttribute="leading" secondItem="x7m-uE-EYi" secondAttribute="leadingMargin" constant="158" id="pzc-3s-mMx"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="dFK-AN-1Kf" secondAttribute="trailing" constant="68" id="vnm-yJ-V72"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
