Connected an add button to theChristmasPresentsTableViewController as action.

--- a/PresentBaseSwift3.0/Base.lproj/Main.storyboard
+++ b/PresentBaseSwift3.0/Base.lproj/Main.storyboard
@@ -82,6 +82,9 @@
                     <navigationItem key="navigationItem" id="3L0-Rg-DCA">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="IXt-pJ-Lhk">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="addPresent:" destination="bBl-dM-7Ef" id="AYi-20-sn2"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
